# lifts

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/lifts/: __init__.py  lifts.py  utils.py
src/streaks/: __init__.py  streaks.py  utils.py
src/tests/: color_test.py  count_lifts_test.py  decompose_into_lifts_test.py  format_lift_test.py  is_lift_test.py  lifts_test.py  main_test.py  number_of_elements_test.py  print_float_list_test.py  print_lift_test.py  print_lifts_test.py  random_floats_test.py  seq_test.py  sequence_length_test.py  stats_test.py  streaks_test.py  test_main.py  usage_test.py  utils_test.py
