[project]
name = "lifts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey S. Haemer", email = "jeffrey.haemer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lifts = "lifts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
