[project]
name = "lifts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey S. Haemer", email = "jeffrey.haemer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.5",
    "pytest>=8.3.4",
    "sympy>=1.13.3",
]

[project.scripts]
hello = "lifts:main"
main = "lifts.utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
